--- a/styles/shows.css
+++ b/styles/shows.css
@@ -222,32 +222,18 @@
     padding-top: 2em;
   }
   
-  form{
-    display: flex;
-    flex-direction: column;
-    padding-top: 1em;
-    gap: 1rem;
-  }
-  form label{
-    color: rgba(50, 50, 50, 0.5);
-  
-  }
-  form input, form textarea{
-    padding: 0.5em;
-    border: 1px solid rgba(50,50,50,0.5);
-    box-sizing: border-box;
-    background-color: #f9f9f9;
-    color: black;
-    border-radius: 0.5rem;
-  
-  }
-  form button{
+  .buy-tickets{
     background-color: #323232;
     color: white;
     font-size: 1.5rem;
     padding: 0.75rem 1.5rem;
     border-radius: 0.5rem;
-    width:100%
+    width:100%;
+    transition: background-color 0.3s ease;
+
+    &:hover{
+      background-color: #444;
+    }
   
   }
   .comments{
@@ -322,6 +308,73 @@
   .footer__copyright{
     padding-top: 1em;
   }
+
+  .shows__grid{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .show-item{
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    border-bottom: 1px solid #ccc;
+  }
+  .show-label{
+    color:#888;
+    font-size: 0.9rem;
+    margin-bottom: 0.25rem;
+  }
+  .show-date, .show-venue, .show-location{
+    margin-bottom: 1rem;
+  }
+  .show-date{
+    font-weight: 500;
+  }
+
+  .show__title{
+    padding-left: .5em;
+    padding-top: 1em;
+    font-weight: bold;
+    font-size: 30px;
+  }
+  .song {
+    position: relative;
+    width: 100%;
+    max-width: none;
+    margin: 0;
+    z-index: 2;
+    padding: 3rem 1rem;
+    background-image: linear-gradient(rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)), url("../assets/images/Photo-gallery-3.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .soundcloud-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .shows__album {
+    font-size: 0.5625em;
+    color: white;
+    padding-left: 4em;
+
+  }
+  
+  .song__title{
+    font-size: 0.8125rem;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    color: white;
+    padding-left: 1.875rem;
+    line-height: 1.875rem;
+    width: 80%;
+    font-weight: bolder;
+  }
+
   @media (min-width: 768px) {
     .header__nav {
       flex-direction: row;
