--- a/styles/shows.css
+++ b/styles/shows.css
@@ -320,6 +320,17 @@
     justify-content: space-between;
     flex-direction: column;
     border-bottom: 1px solid #ccc;
+
+    &:hover {
+      background-color: #f9f9f9;
+      border-color: #888;
+      cursor: pointer;
+    }
+    &.selected{
+      background-color: #323232;
+      color: white;
+      border-color: #444;
+    }
   }
   .show-label{
     color:#888;
@@ -327,7 +338,9 @@
     margin-bottom: 0.25rem;
   }
   .show-date, .show-venue, .show-location{
+    flex: 1;
     margin-bottom: 1rem;
+    text-align: left;
   }
   .show-date{
     font-weight: 500;
@@ -373,6 +386,9 @@
     line-height: 1.875rem;
     width: 80%;
     font-weight: bolder;
+  }
+  .show__headings{
+    display: none;
   }
 
   @media (min-width: 768px) {
@@ -523,6 +539,49 @@
       justify-content: flex-end;
       width: 100%;
     }
+    .show-item{
+      display: flex;
+      justify-content: space-between;
+      flex-direction: row;
+      border-bottom: 1px solid #ccc;
+      text-align: left;
+      width:100%;
+    
+    }
+    .buy-tickets{
+      background-color: #323232;
+      color: white;
+      font-size: 1rem;
+      padding: 0.75rem 1.5rem;
+      border-radius: 0.5rem;
+      width:25%;
+      transition: background-color 0.3s ease;
+  
+      &:hover{
+        background-color: #444;
+      }
+    
+    }
+    .show-label{
+      display: none;
+    }
+    .show__headings{
+      display: flex;
+      justify-content: flex-start;
+      color:#888;
+      margin: 0;
+      font-size: 0.9rem;
+      margin-bottom: 0.25rem;
+      gap:5rem;
+      padding-left: 1rem;
+
+      text-align: left;
+      width: 70%;
+
+    }
+    .heading__date, .heading__venue, .heading__location{
+      width: 20%;
+    }
   }
   @media (min-width: 1280px) {
     .header__nav {
@@ -665,6 +724,20 @@
   
     .comment__button--container {
       padding-top: 1em;
+    }
+    .show__container{
+      display: flex;
+      gap:10rem;
+      
+    }
+    .show__right{
+      width:100%;
+    }
+    .song__spacing{
+      display: flex;
+    }
+    .soundcloud-link{
+      width: 70%;
     }
   }
   
