--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -279,14 +279,14 @@ h3 {
 
   &:hover {
     background-color: #f9f9f9;
-    border-color: #888;
+    border-color: #FAFAFA;
     cursor: pointer;
   }
 
   &.selected {
     background-color: $background-color;
     color: $white;
-    border-color: #444;
+    border-color: #E1E1E1;
   }
 
   .show-label {
