hover color in style guide does not match mockup, changed it

--- a/styles/shows.css
+++ b/styles/shows.css
@@ -266,8 +266,8 @@
     border-bottom: 1px solid #ccc;
 
     &:hover {
-      background-color: #FAFAFA;
-      border-color: #FAFAFA;
+      background-color: #ccc;
+      border-color: #ccc;
       cursor: pointer;
     }
     &.selected{
