--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -278,8 +278,8 @@ h3 {
   border-bottom: 1px solid #ccc;
 
   &:hover {
-    background-color: #f9f9f9;
-    border-color: #FAFAFA;
+    background-color: #ccc;
+    border-color: #ccc;
     cursor: pointer;
   }
 
