--- a/styles/shows.css
+++ b/styles/shows.css
@@ -175,9 +175,10 @@
     width:100%;
     transition: background-color 0.3s ease;
 
-    &:hover{
+    .buy-tickets:hover{
       background-color: #444;
     }
+    
   
   }
   .comments{
@@ -256,7 +257,7 @@
   .shows__grid{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0rem;
   }
   .show-item{
     padding: 1rem;
@@ -395,6 +396,8 @@
       width: 33%;
       padding: 0.625em 0;
       box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
    
     }
     .footer__text--a {
@@ -409,6 +412,7 @@
       padding: 0.625em;
       box-sizing: border-box;
       flex: 1;
+      padding-left: 1rem;
     }
     .footer__titleandicons {
       display: flex;
@@ -500,9 +504,14 @@
     .shows__title {
       width: 120%;
       font-size: 2.8rem;
-      font-weight: 4rem;
+      font-weight: 500;
       line-height: 1em;
       padding-bottom: 2rem;
+
+    .footer__email--b {
+      margin-top: auto; 
+    }
+  
     }
     .show__right{
       padding-left: 2rem;
