--- a/styles/shows.css
+++ b/styles/shows.css
@@ -178,8 +178,7 @@
   }
   
   .show-item:hover{
-    background-color: E1E1E1; /* Hover background */
-    
+    background-color: #b1aaaa; /* Hover background */
 
   }
   .comments{
@@ -267,6 +266,10 @@
     flex-direction: column;
     border-bottom: 1px solid #ccc;
 
+    &:hover {
+      background-color: #d7c4c4;
+      border-color: #d7c4c4;
+      cursor: pointer;
     }
     &.selected{
       background-color: #E1E1E1;
@@ -469,7 +472,10 @@
       padding: 0.75rem 1.5rem;
       border-radius: 0.5rem;
       width:25%;
-      transition: background-color 0.3s ease;  
+      transition: background-color 0.3s ease;
+  
+      &:hover{
+        background-color: #444;
       }
     
     }
